<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="action_settings">Settings</string>
    <string name="lbl_level">Level:</string>
    <string name="lbl_time">Time:</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_congrats_or">--- or ---</string>

    <string name="cliptype_character">Character</string>
    <string name="cliptype_action">Action</string>
    <string name="cliptype_result">Result</string>
    <string name="cliptype_place">Place</string>
    <string name="cliptype_signature">Signature</string>

    <string name="choose_medium">Choose Medium</string>
    <string name="lbl_video">Video</string>
    <string name="lbl_audio">Audio</string>
    <string name="lbl_photo">Photo</string>
    <string name="lbl_record">Record Clip</string>
    <string name="lbl_order_media_desc">Now put your clips in order to present clear beginning, middle, and end.</string>
    <string name="lbl_card_tap">Tap to select a different clip</string>
    <string name="lbl_import">Import</string>
    <string name="lbl_capture">Capture</string>
    <string name="menu_done">Done</string>
    <string name="clip_order">Clip order</string>

    <!-- Record Narration Dialog -->
    <string name="dialog_record">START RECORDING</string>
    <string name="dialog_done">DONE</string>
    <string name="dialog_pause">PAUSE</string>
    <string name="dialog_resume">RESUME</string>
    <string name="dialog_stop">STOP RECORDING</string>
    <string name="dialog_redo">REDO</string>

    <string name="edit_card">Edit Card</string>
    <string name="change_goal">Change Goal</string>
    <string name="duplicate_card">Duplicate Card</string>
    <string name="duplicate_clip">Duplicate Clip</string>
    <string name="remove_card">Remove Card</string>

    <!-- THE FOLLOWING IS MERGED FROM /android-studio/sdk/extras/google/play_apk_expansion/downloader_library/res/values -->

    <!-- When a download completes, a notification is displayed, and this
        string is used to indicate that the download successfully completed.
        Note that such a download could have been initiated by a variety of
        applications, including (but not limited to) the browser, an email
        application, a content marketplace. -->
    <string name="notification_download_complete">Download complete</string>

    <!-- When a download completes, a notification is displayed, and this
        string is used to indicate that the download failed.
        Note that such a download could have been initiated by a variety of
        applications, including (but not limited to) the browser, an email
        application, a content marketplace. -->
    <string name="notification_download_failed">Download unsuccessful</string>


    <string name="state_unknown">Starting..."</string>
    <string name="state_idle">Waiting for download to start</string>
    <string name="state_fetching_url">Looking for resources to download</string>
    <string name="state_connecting">Connecting to the download server</string>
    <string name="state_downloading">Downloading resources</string>
    <string name="state_completed">Download finished</string>
    <string name="state_paused_network_unavailable">Download paused because no network is available</string>
    <string name="state_paused_network_setup_failure">Download paused. Test a website in browser</string>
    <string name="state_paused_by_request">Download paused</string>
    <string name="state_paused_wifi_unavailable">Download paused because wifi is unavailable</string>
    <string name="state_paused_wifi_disabled">Download paused because wifi is disabled</string>
    <string name="state_paused_roaming">Download paused because you are roaming</string>
    <string name="state_paused_sdcard_unavailable">Download paused because the external storage is unavailable</string>
    <string name="state_failed_unlicensed">Download failed because you may not have purchased this app</string>
    <string name="state_failed_fetching_url">Download failed because the resources could not be found</string>
    <string name="state_failed_sdcard_full">Download failed because the external storage is full</string>
    <string name="state_failed_cancelled">Download cancelled</string>
    <string name="state_failed">Download failed</string>

    <string name="kilobytes_per_second">%1$s KB/s</string>
    <string name="time_remaining">Time remaining: %1$s</string>
    <string name="time_remaining_notification">%1$s left</string>
    <string name="add_clips_before_narrating">Add some clips before adding narration</string>
    <string name="add_clips_before_reordering">Add clips before changing their order</string>
    <string name="add_clips_generic">Add clips first</string>

<string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_activity_test_drag">TestDrag</string>

    <!-- Screen title before and during recording -->
    <!-- Screen title after recording -->
    <!-- Screen title while playing back a recording -->
    <!-- Label shown during recording -->
    <string name="recording">Recording</string>
    <!-- Label shown when the recording is stopped for a reason other than the user stopping it (e.g. the sd card was removed) -->
    <string name="recording_stopped">Recording stopped</string>
    <!-- label shown when there is not enough space to record something -->
    <string name="storage_is_full">Storage is full</string>
    <!-- label shown when the recording has reached maximum allowed file size -->
    <string name="max_length_reached">Maximum length reached</string>
    <!-- label shown when there is no sd card available to record to -->
    <string name="insert_sd_card">SD card is required</string>
    <!-- label shown when there is more than 1 minute but less than 9 minutes of space left to record -->
    <!-- label shown when there is less than 1 minute of space left to record -->


    <!-- button to accept the current recording and return it to the caller -->
    <!-- button to discard the current recording and return to the caller -->
    <!-- acknowlegement button in a number of dialogs -->
    <string name="button_ok">OK</string>
    <!-- Do not translate. Format of the timer that shows how much has been recorded so far -->
    <string name="timer_format" translatable="false"><xliff:g id="format">%02d</xliff:g>:<xliff:g id="format">%02d</xliff:g></string>
    <!-- label shown before the user has recorded anything -->


    <!-- the name under which recordings will be visible in the media database is formatted like this -->
    <string name="audio_db_title_format" translatable="false"><xliff:g id="format">yyyy-MM-dd HH:mm:ss</xliff:g></string>
    <!-- all recordings will show up in the media database with this 'artist' name -->
    <string name="audio_db_artist_name">Your recordings</string>
    <!-- all recordings will show up in the media database with this 'album' name -->
    <string name="audio_db_album_name">Audio recordings</string>
    <!-- all recordings will show up in the media database in a playlist with this name -->
    <string name="audio_db_playlist_name">My recordings</string>
    <!-- shown as the message in a dialog when an error occured because of an error accessing the sd card -->
    <string name="error_sdcard_access">Unable to access external or internal storage</string>
    <!-- shown as the message in a dialog when the app encountered an unspecified internal error -->
    <string name="error_app_internal">Internal application error</string>
    <!-- shown as the message in a dialog when the recording could not be added to the media database -->
    <string name="error_mediadb_new_record">Unable to save recorded audio</string>
    <!-- shown as the message in a dialog when an export will tak up too much space -->
    <string name="error_storage_space" formatted="false">"Whoops, we're out of space. Please make approximately %.2f%nMB available and try again!"</string>

    <!-- add for libra begin -->
    <string name="default_record_name">untitled record</string>
    <string name="menu_view_record_list">View record list</string>
    <string name="menu_setting">Settings</string>
    <string name="delete_dialog_title">Do you want to delete current record?</string>
    <string name="overwrite_dialog_title">%s has already existed. Do you want to overwrite it?</string>
    <string name="preferences_title">Settings</string>
    <string name="pref_title_record_type">Record file type</string>
    <string name="prefDialogTitle_recordType">Please select file type</string>
    <string name="prefDefault_recordType">audio/3gpp</string>
    <string name="pref_title_enable_high_quality">Enable high quality</string>
    <string name="pref_summary_enable_high_quality">The audio file with high quality can be larger</string>
    <string name="pref_title_enable_sound_effect">Enable sound effect</string>
    <string name="pref_summary_enable_sound_effect">Playing sound effect when the state is changed</string>
    <string name="notification_recording">Recording...</string>
    <string name="notification_stopped">Recording is stopped</string>
    <string name="notification_warning">Low storage(less than %d minutes)...</string>
    <string name="sd_card_not_available">SD card is not available</string>
    <string name="open_file_explorer">Open file explorer</string>
    <string name="alert_message_delete_record">Do you want to delete selected record?</string>
    <string name="recording_narration">Recording Narration</string>
    <string name="could_not_start_narration">Could not start narration!</string>
    <string name="jumble">Jumble</string>
    <string name="order">Order</string>
    <string name="narrate">Narrate</string>
    <string name="publish">Publish</string>
    <string name="total">Total</string>
    <string name="cancel">Cancel</string>
    <string name="trim_clip">Trim Clip</string>
    <string name="narration">Narration</string>
    <string name="this_story_has_no_clips_to_publish">This story has no clips to publish!</string>
    <string name="clip_with_no_duration">Unable to publish! Clip %1$s has a duration of 0. Is it blank or an image?</string>
    <string name="clips_with_no_duration">Unable to publish! Clips %1$s have a duration of 0. Are they blank or images?</string>
    <string name="clip_audio_tracks">Clip Audio Tracks</string>
 <!-- "In the Services & APIs page, locate the Licensing & In-App Billing section. Your public key for licensing is given in the Your License Key For This Application field."  -->
    <string name="base64_public_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAuIQL8sBFjqJo1Nwl/l5YyAdSpcwAjQEtwxI2mZ43nEDc6BCwZeuxk5n3dqvnL6eXxyACmzMIA2/8jeWOz/AEBZBv1ROp2zBooWyD6BGqF2Sdn75DXQJnYkD5Zk+YZ19ylIHBdkF8x9xPDFhz7kfd1nUTI/CaOzFUd9phMBU7VfyAEJSfBKQhoknYIpS9/TCzyNQZaDDQhT7tzJxClFFDeRmuvaTFNIRtr6aqlf4aOIG6NGd53YjlnX/T/c3gMjWfQuAplFG7gyrOBTwK/36JEADb6CrCkv5k6BQnT4CF0SfbQx36ebgBN2RCH7rSpl8Sd7st9gFOr27QZcUcVri8ywIDAQAB</string>
    <string name="liger_salt">foo</string>

    <!-- add for libra end -->
</resources>
